	* Players in map are shown the raw damage a player has taken (i.e. before
	Magic Guard subtracts HP damage).
	* Skills Disorder and Threaten now inflict both their mob effects on mobs.

2012-10-25  GoldenKevin  (revision 151)

	* Corrected behavior of stacking items. Obtained items will always fill up
	any unfilled slots of the same item before they start taking up empty slots.
	* Fixed buying equips or enough items to fill up an entire slot (100 potions
	for example).
	* Fixed mob counting quests not incrementing properly if mobs are not killed
	in one hit.
	* Fixed quest completed notices repeatedly popping up for a quest even if
	its requirements were already fulfilled before they were checked again.
	* Maple TV NPCs no longer show the placeholder script for shop NPCs.
	* Fixed NullPointerException for mob skills.
	* Allow movement between The Forest East of Henesys and On the Way to the
	Harbor.

2012-10-26  GoldenKevin  (revision 152)

	* Fixed scripted portals being silent when entered.
	* Fixed broken second job advancement to crossbowmen and bandits.
	* Added full support for Camila's Gem jump quest.

2012-10-27  GoldenKevin  (revision 153)

	* All NPC scripts account for a full inventory before giving any items.

2012-10-27  GoldenKevin  (revision 154)

	* Added NPCs and NPC stubs for NPCs in New Leaf City.
	* Added persistent event for subway between New Leaf City and Kerning City,
	and enabled it by default in game*.properties
	* Fixed Kerning City ticket gate not taking basic tickets to New Leaf City.
	* Fixed Kerning City ticket seller giving the wrong items.
	* Ellinia Station ticket usher does not allow a player to visit Orbis unless
	the ship_ossyria persistent event is enabled. The player is no longer
	instantly warped there.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.