@@ -129,6 +129,7 @@ public final class Skills {
 		HEAL = 2301002,
 		INVINCIBLE = 2301003,
 		CLERIC_BLESS = 2301004,
+		DISPEL = 2311001,
 
 		MYSTIC_DOOR = 2311002,
 		CLERIC_HOLY_SYMBOL = 2311003,
